stub and add two endpoints for grabbing admin statistics
