# config/swagger.json
@@ -7,7 +7,6 @@
     "termsOfService": "```\n@Copyright 2017 DentalHQ\n```",
     "contact": {}
   },
-  "host": "localhost:3090",
   "schemes": [
     "http"
   ],
@@ -18,6 +17,79 @@
     "application/json"
   ],
   "paths": {
+    "/api/v1/stats/dentist-offices": {
+      "get": {
+        "tags": [
+          "Admin Statistics"
+        ],
+        "summary": "Retrieve stats about dentist offices",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Status 200",
+            "schema": {
+              "required": [
+                "data"
+              ],
+              "type": "object",
+              "properties": {
+                "data": {
+                  "required": [
+                    "count"
+                  ],
+                  "type": "object",
+                  "description": "the response data",
+                  "properties": {
+                    "count": {
+                      "type": "number",
+                      "description": "the number of dentist offices in the database"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized access"
+          }
+        }
+      }
+    },
+    "/api/v1/stats/active-users": {
+      "get": {
+        "tags": [
+          "Admin Statistics"
+        ],
+        "summary": "Retrieve stats about active users",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Status 200",
+            "schema": {
+              "required": [
+                "data"
+              ],
+              "type": "object",
+              "properties": {
+                "data": {
+                  "required": [
+                    "count"
+                  ],
+                  "type": "object",
+                  "description": "the response data object",
+                  "properties": {
+                    "count": {
+                      "type": "number",
+                      "description": "the number of verified users"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/accounts/login": {
       "post": {
         "tags": [
@@ -49,8 +121,10 @@
                   "description": "the password of the user account"
                 }
               },
-              "description": "The login body request",
-              "example": "{\n  \"email\": \"n672588341@mvrht.com\",\n  \"password\": \"WORDpa55\"\n}"
+              "description": "The login body request"
+            },
+            "x-examples": {
+              "application/json": "{\n  \"email\": \"n672588341@mvrht.com\",\n  \"password\": \"WORDpa55\"\n}"
             }
           }
         ],
@@ -73,8 +147,7 @@
                   "type": "string",
                   "description": "the user access level"
                 }
-              },
-              "example": "{\n  \"type\": \"admin\",\n  \"token\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MTUsImlhdCI6MTQ5Mzc3MjAzOH0.7NReO9rJQybjwc7iHFlS26bSzLYt2_JrH0KXo7le5dQ\"\n}"
+              }
             },
             "examples": {
               "application/json": "{\n  \"type\": \"admin\",\n  \"token\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MTUsImlhdCI6MTQ5Mzc3MjAzOH0.7NReO9rJQybjwc7iHFlS26bSzLYt2_JrH0KXo7le5dQ\"\n}"
@@ -114,8 +187,10 @@
                   "description": "the password of the user account"
                 }
               },
-              "description": "The login body request",
-              "example": "{\n  \"email\": \"n672588341@mvrht.com\",\n  \"password\": \"WORDpa55\"\n}"
+              "description": "The login body request"
+            },
+            "x-examples": {
+              "application/json": "{\n  \"email\": \"n672588341@mvrht.com\",\n  \"password\": \"WORDpa55\"\n}"
             }
           }
         ],
@@ -138,8 +213,7 @@
                   "type": "string",
                   "description": "the user access level"
                 }
-              },
-              "example": "{\n  \"type\": \"admin\",\n  \"token\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MTUsImlhdCI6MTQ5Mzc3MjAzOH0.7NReO9rJQybjwc7iHFlS26bSzLYt2_JrH0KXo7le5dQ\"\n}"
+              }
             },
             "examples": {
               "application/json": "{\n  \"type\": \"admin\",\n  \"token\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MTUsImlhdCI6MTQ5Mzc3MjAzOH0.7NReO9rJQybjwc7iHFlS26bSzLYt2_JrH0KXo7le5dQ\"\n}"
